--- a/MyShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/Index.cshtml
@@ -24,7 +24,7 @@
 			{
 				<div class="dashboard__item" data-id="@item.Id">
 					<div class="item__left">
-					<div class="item__title item">@item.Title @item.Memory GB (@item.ProdColor)</div>
+					<div class="item__title item">@item.Title</div>
 					</div>
 					<div class="item__right">
 					<a asp-area="Admin" asp-controller="Product" asp-action="AddEditAttribute" asp-route-Id="@item.Id" class="item__title attributes">
