--- a/MyShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - MyShop</title>
+	<title>@ViewData["Title"] - HomeDelievry</title>
 	<link rel="stylesheet" href="~/assets/css/admin.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -61,10 +61,8 @@
 		<aside>
 
 			<div class="company__info">
-				<div class="company__logo">
-					<img src="~/admin/img/common/3d_avatar_30.png" alt="Glass Houses" />
-				</div>
-				<div class="company__name">Mymobile</div>
+				
+				<div class="company__name">HomeDelivery</div>
 			</div>
 			<nav class="navbar">
 				<ul>
