--- a/MyShop/Views/Info/AboutUs.cshtml
+++ b/MyShop/Views/Info/AboutUs.cshtml
@@ -13,15 +13,15 @@
         <div class="about-us__title title">Մեր մասին</div>
         <div class="about-us__wrapper">
             <div class="about-us__welcome">
-                <img src="~/assets/img/mymobile.png" alt="myMobile"/>
+                <img src="~/assets/img/banner/hd.png" alt="myMobile"/>
            <div class="welcome__content">
                      <h1>
-                Բարի գալուստ <b>Mymobile՝</b> ձեր հուսալի գործընկերը ժամանակակից տեխնոլոգիաների և բջջային լուծումների աշխարհում:
+                        Բարի գալուստ <b>Home Delivery</b>: Մենք պարտավորվում ենք հեշտացնել ձեր կյանքը՝ տրամադրելով արագ, հուսալի և առանց դժվարությունների տնային առաքման ծառայություններ:
             </h1>
                 <p>
-                Մեր հիմնադրման օրվանից մենք ձգտել ենք մեր հաճախորդներին տրամադրել շուկայում առկա լավագույն և նորարարական արտադրանքները: <b>Mymobile-ը</b> մասնագիտացած է բարձրորակ սարքավորումների և հեռախոսների վաճառքում` առաջարկելով միայն ապացուցված և պահանջված մոդելներ առաջատար արտադրողներից:
-            </p>
-            <p>Մեր առաքելությունն է զարգացած տեխնոլոգիաները հասանելի դարձնել բոլորին, ովքեր գնահատում են հուսալիությունը, կատարումը և ոճը: Մենք ուշադիր ընտրում ենք մեր արտադրանքը, որպեսզի համոզվենք, որ մեր առաջարկած յուրաքանչյուր ապրանք համապատասխանում է որակի ամենաբարձր չափանիշներին:</p>
+                        Անկախ նրանից, թե դա մթերքներ են, առաջին անհրաժեշտության իրեր, թե ձեր սիրելի տեղական արտադրանքը, մենք դրանք խնամքով և ճշգրտությամբ բերում ենք ձեր դուռը:
+                    </p>
+                    <p>Մեր առաքելությունն է ապահովել հարմարավետություն, խնայել ձեր ժամանակը և ապահովել, որ առաքման յուրաքանչյուր փորձ գերազանցի ձեր սպասելիքները: Հաճախորդին առաջին մոտեցմամբ, կրքոտ թիմով և առաքման լայն ցանցով մենք այստեղ ենք՝ սպասարկելու ձեր կարիքները, երբ դուք մեր կարիքն ունենաք:</p>
 
                 </div>
             </div>
@@ -29,16 +29,12 @@
             <div class="why-choose-us">
                 <strong>Ինչու՞ ընտրել մեզ:</strong>
                 <ul>
-                    <li><b>Լայն տեսականի.</b> Այստեղ դուք կգտնեք ամեն ինչ՝ սմարթֆոնների վերջին մոդելներից մինչև նորագույն գաջեթներ և աքսեսուարներ:</li>
+                    <li><b>Արագ և հուսալի.</b> Մենք առաքում ենք ժամանակին, ամեն անգամ:</li>
                     <li><b>Որակ և հուսալիություն.</b> Մենք աշխատում ենք միայն վստահելի ապրանքանիշերի և մատակարարների հետ՝ ապահովելու մեր հաճախորդների առավելագույն բավարարվածությունը:</li>
-                    <li><b>Մասնագիտական ​​աջակցություն.</b> մեր փորձառու մասնագետների թիմը միշտ պատրաստ է օգնել ձեզ ընտրության հարցում և պատասխանել ցանկացած հարցի:</li>
                     <li><b>Հարմարավետություն և սպասարկում.</b> մենք առաջարկում ենք առաքման ճկուն տարբերակներ և վճարման հարմար եղանակներ՝ մեզ հետ գնումները պարզ և հարմարավետ դարձնելու համար:</li>
                     <li></li>
-                </ul
+                </ul>
             </div>
-            <p>
-                <b>Mymobile</b>-ում մենք հասկանում ենք, թե որքան կարևոր է տեղեկացված լինել վերջին տեխնոլոգիաներից և օգտագործել լավագույն տեխնոլոգիաները, ուստի մենք անընդհատ հետևում ենք վերջին միտումներին և թարմացնում մեր տեսականին, որպեսզի միշտ կարողանաք գտնել այն, ինչ ձեզ հարկավոր է:
-            </p>
             <p>
                 <b>Շնորհակալություն</b> մեզ ընտրելու համար: Մենք գնահատում ենք յուրաքանչյուր հաճախորդի և ձգտում ենք ձեր գնումների փորձը դարձնել հնարավորինս հաճելի և արդյունավետ: Եթե ​​ունեք հարցեր կամ առաջարկություններ, մի հապաղեք կապվել մեզ հետ, մենք միշտ պատրաստ ենք օգնել:
             </p>
