--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -112,7 +112,7 @@
 					</div>
 					<div class="floating-label-input tel">
 						<div class="input-code">
-							<img src="~/assets/img/armenia.png" alt="flag armenia" />
+							<img src="~/assets/img/FArmenia.png" alt="flag armenia" />
 							<span>+374</span>
 						</div>
 						<input name="PhoneNumber" type="text"
