--- a/MyShop/Views/Product/Details.cshtml
+++ b/MyShop/Views/Product/Details.cshtml
@@ -13,7 +13,7 @@
 }
 <section class="product">
 	<div class="container">
-		<div class="product__title mobile">@Model.Vendor @Model.Title @Model.Memory GB (@Model.ProdColor)</div>
+		<div class="product__title mobile">@Model.Vendor @Model.Title</div>
 		<div class="product__wrapper">
 			<div class="swiper mySwiper">
 				<div class="swiper-wrapper">
