--- a/MyShop/Views/Shared/_Filter.cshtml
+++ b/MyShop/Views/Shared/_Filter.cshtml
@@ -30,20 +30,20 @@
 			<label for="@item1.Value">@item1.Value</label>
 		}
 	}
-	@if (ViewBag.Memories != null)
-	{
-		<div class="filter__memory filter__item">
-			<span>Հիշողություն</span>
-			@foreach (var item in ViewBag.Memories as List<string>)
-			{
-				<div class="">
-					<input type="checkbox" name="Memory" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Memory")?.GetValue(ViewBag.Filter)?.Contains(item))">
-					<label for="@item">@item</label>
-				</div>
-			}
+	 @* @if (ViewBag.Memories != null)
+	 {
+	 	<div class="filter__memory filter__item">
+	 		<span>Հիշողություն</span>
+	 		@foreach (var item in ViewBag.Memories as List<string>)
+	 		{
+	 			<div class="">
+	 				<input type="checkbox" name="Memory" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Memory")?.GetValue(ViewBag.Filter)?.Contains(item))">
+	 				<label for="@item">@item</label>
+	 			</div>
+	 		}
 
-		</div>
-	}
+	 	</div>
+	 } *@
 	@if (ViewBag.Memories != null)
 	{
 		<div class="filter__memory filter__item">
@@ -57,18 +57,6 @@
 			}
 		</div>
 	}
-	<div class="filter__color filter__item">
-		<span>Գույն</span>
-		@foreach (var item in Enum.GetValues(typeof(ProdColor)))
-		{
-			<div class="">
-				<input type="checkbox" name="Color" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Color")?.GetValue(ViewBag.Filter)?.Contains($"{item}"))">
-				<label for="@item">@item</label>
-			</div>
-		
-		}
-	
-	</div>
 	<button type="submit" class="btn-green">Հաստատել</button>
 	<a class="btn-green" asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId">Չեղարկել</a>
 </form>
